--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -649,31 +649,31 @@ window.makeComments = async function(character) {
 
         // Determine the current segment based on the progress
         let currentSegment = Math.ceil(progress / 15);
-      	console.log("Total segments: "+totalSegments+" Current segment: "+currentSegment);
+        console.log("Total segments: " + (character === 'Avatar' ? avatar_totalSegments : hachi_totalSegments) + " Current segment: " + currentSegment);
 
         // Display the text for the current segment only
-        if (currentSegment === 0 || currentSegment === 1) {
-            if (character === 'Avatar') {
-                variables().avatar_comment = ""; // Set to empty string
-            } else if (character === 'Hachi') {
-                variables().hachi_comment = ""; // Set Hachi's comment to empty string
-            }
-        } else if (currentSegment >= totalSegments) {
-            // Reset the initial checkpoint for the next segment
-            initialCheckpoint = currentDistance;
-        } else if (currentSegment === totalSegments - 1) {
-            if (character === 'Avatar') {
-                variables().avatar_comment = approachingFinal;
-            } else if (character === 'Hachi') {
-                variables().hachi_comment = approachingFinal; // Set Hachi's comment to approachingFinal
-            }
-        } else {
-            if (character === 'Avatar') {
-                variables().avatar_comment = avatar_randomSentences[currentSegment - 2]; // Subtract 2 because the first segment is 1-based
-            } else if (character === 'Hachi') {
-                variables().hachi_comment = hachi_randomSentences[currentSegment - 2]; // Set Hachi's comment to random sentence
-            }
-        }
+       if (currentSegment === 0 || currentSegment === 1) {
+          if (character === 'Avatar') {
+              variables().avatar_comment = ""; // Set to empty string
+          } else if (character === 'Hachi') {
+              variables().hachi_comment = ""; // Set Hachi's comment to empty string
+          }
+      } else if (currentSegment >= avatar_totalSegments || currentSegment >= hachi_totalSegments) {
+          // Reset the initial checkpoint for the next segment
+          initialCheckpoint = currentDistance;
+      } else if (currentSegment === avatar_totalSegments - 1 || currentSegment === hachi_totalSegments - 1) {
+          if (character === 'Avatar') {
+              variables().avatar_comment = approachingFinal;
+          } else if (character === 'Hachi') {
+              variables().hachi_comment = approachingFinal; // Set Hachi's comment to approachingFinal
+          }
+      } else {
+          if (character === 'Avatar') {
+              variables().avatar_comment = avatar_randomSentences[currentSegment - 2]; // Subtract 2 because the first segment is 1-based
+          } else if (character === 'Hachi') {
+              variables().hachi_comment = hachi_randomSentences[currentSegment - 2]; // Set Hachi's comment to random sentence
+          }
+      }
     }, 1000); // Check for updates every second
 };
 
