--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -599,7 +599,8 @@ window.makeComments = async function(character) {
     // Initialize character data if not already initialized
     if (!characterData[character]) {
         characterData[character] = {};
-		characterData[character].initialCheckpoint = window[`${character}_checkpoint_dist`];
+        characterData[character].initialCheckpoint = window[`${character}_checkpoint_dist`];
+        console.log(`Initial checkpoint for ${character}:`, characterData[character].initialCheckpoint);
         characterData[character].randomSentences = {};
         characterData[character].randomSentences.observes = generateRandomSentences(observes, 10);
         characterData[character].randomSentences.soundscape = generateRandomSentences(soundscape, 10);
@@ -608,6 +609,7 @@ window.makeComments = async function(character) {
         characterData[character].randomSentences.soundscape = characterData[character].randomSentences.soundscape.sort(() => Math.random() - 0.5);
         // Calculate the total number of segments based on the initial checkpoint distance
         characterData[character].totalSegments = Math.ceil(characterData[character].initialCheckpoint / 15);
+        console.log(`Total segments for ${character}:`, characterData[character].totalSegments);
     }
 
     const approachingSentences = Object.values(approaching);
@@ -616,11 +618,17 @@ window.makeComments = async function(character) {
     // Set up a timer to periodically check for updates in checkpoint distances
     setInterval(() => {
         // Determine the current distance and progress made
-        let currentDistance = characterData[character].initialCheckpoint; // Assuming initialCheckpoint[character] is defined elsewhere
+        let currentDistance = window[`${character}_checkpoint_dist`]; // Assuming checkpoint_dist is updated elsewhere
         let progress = characterData[character].initialCheckpoint - currentDistance;
         // Determine the current segment based on the progress
         let currentSegment = Math.ceil(progress / 15);
-        console.log("Total segments: " + characterData[character].totalSegments + " Current segment: " + currentSegment);
+        console.log(`Total segments for ${character}:`, characterData[character].totalSegments);
+        console.log(`Current segment for ${character}:`, currentSegment);
+        // Update total segments if necessary
+        if (currentSegment === 0) {
+            characterData[character].totalSegments = Math.ceil(currentDistance / 15);
+            console.log(`Total segments for ${character} updated to:`, characterData[character].totalSegments);
+        }
         // Display the text for the current segment only
         if (currentSegment === 0 || currentSegment === 1) {
             variables()[`${character}_comment`] = ""; // Set to empty string
@@ -634,7 +642,6 @@ window.makeComments = async function(character) {
         }
     }, 1000); // Check for updates every second
 };
-
 
   //Last line of the function. KEEP
 })
