--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
 					if (delimiterIndex !== -1) { // Check if the delimiter exists
 						messageID = message.substring(0, delimiterIndex); // Store the message ID globally
 						console.log(messageID);
-						var fullMessage = message.substring(delimiterIndex + 1); // Extract the message text after the delimiter
+						var fullMessage = message.substring(delimiterIndex + 1).trim(); // Extract the message text after the delimiter
 						console.log(fullMessage);
 						clearTimeout(timeoutID);
 						speakMessage(fullMessage);
@@ -657,7 +657,7 @@
 					} else { // If the delimiter does not exist
 						messageID = ""; // Set message ID to an empty string globally
 						console.log(messageID);
-						var fullMessage = message; // The full message is the entire input
+						var fullMessage = message.trim(); // The full message is the entire input
 						console.log(fullMessage);
 						clearTimeout(timeoutID);
 						speakMessage(fullMessage);
