--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -727,8 +727,7 @@ Loading variables...
 &lt;&lt;set $hachi_street to hachi_street&gt;&gt;
 &lt;&lt;set $hachi_status to hachi_status&gt;&gt;
 &lt;&lt;set $hachi_speed to hachi_speed&gt;&gt;
-&lt;&lt;set $hachi_narrating to narrating_narrating&gt;&gt;
-
+&lt;&lt;set $hachi_narrating to hachi_narrating&gt;&gt;
 
 &lt;&lt;set $avatar_variables = []&gt;&gt;
 &lt;&lt;set $hachi_variables = []&gt;&gt;
