--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1190,7 +1190,7 @@ console.log(variables().hachi_comment);
           var passage_temp = variables().hachi_passage;
           const renderedText = $((document).createDocumentFragment()).wiki(passage_temp).text();
           console.log(renderedText);
-          writeTohachi(&#39;hachi_passage&#39;,renderedText);
+          writeToHachi(&#39;hachi_passage&#39;,renderedText);
           &lt;&lt;/script&gt;&gt;
 	&lt;&lt;/if&gt;&gt;
 &lt;&lt;/repeat&gt;&gt;
