--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1196,7 +1196,7 @@ console.log(variables().hachi_comment);
 &lt;&lt;/repeat&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt;
-&lt;&lt;if $hachi_checkpoint == &quot;Checkpoint 1B”&gt;&gt;
+&lt;&lt;if $hachi_checkpoint == &quot;Checkpoint 1B&quot;&gt;&gt;
   &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
   	&lt;&lt;include &quot;hachi_act1_1&quot;&gt;&gt;
   &lt;&lt;/replace&gt;&gt;
