--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -159,7 +159,8 @@ var LZString={_keyStr:"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz01234
         height: 100%;
         padding: 1%;
       	color: #393939;
-      	font-size: 20px;
+      	font-size: 16px;
+    	line-height: 1.5;
     }
 
     #avatar_story {
