--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
 					var checkbox = document.getElementById("hachiCheckbox");
 					if (checkbox.checked) {
 						deviceName = "hachi_BT";
-						console.log("Setting to "+deviceName "
+						console.log("Setting to "+deviceName);
 					} else {
 						deviceName = "avatar_BT";
-						console.log("Setting to "+deviceName "
+						console.log("Setting to "+deviceName);
 					}
 				}
 
