--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
 	</head>
 	<body>
 		<!-- Checkbox for Hachi -->
-		<label>
-			<input type="checkbox" id="hachiCheckbox" onclick="toggleDeviceName()" />
-			Hachi
-		</label>
+		<input type="checkbox" id="hachiCheckbox" />
+		<label for="hachiCheckbox" class="hachiLabel">Hachi</label>
 		<!-- Console output-->
 		<div id="consoleOutput"></div>
 		<div id="logoSpace">
