--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 	</head>
 	<body>
 		<!-- Checkbox for Hachi -->
-		<input type="checkbox" id="hachiCheckbox" />
-		<label for="hachiCheckbox" class="hachiLabel">Hachi</label>
+		<div id="hachiCheckboxContainer"></div>
+			<input type="checkbox" id="hachiCheckbox" onclick="toggleDeviceName()">
+			<label for="hachiCheckbox" class="hachiLabel">Hachi</label>
+		</div>
 		<!-- Console output-->
 		<div id="consoleOutput"></div>
 		<div id="logoSpace">
