--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 	</head>
 	<body>
 		<!-- Checkbox for Hachi -->
-		<div id="hachiCheckboxContainer"></div>
-			<input type="checkbox" id="hachiCheckbox" onclick="toggleDeviceName()">
+		<div id="hachiCheckboxContainer">
+			<input type="checkbox" id="hachiCheckbox" onclick="toggleDeviceName()" />
 			<label for="hachiCheckbox" class="hachiLabel">Hachi</label>
 		</div>
 		<!-- Console output-->
