--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Checkbox for Hachi -->
 		<div id="hachiCheckboxContainer">
 			<input type="checkbox" id="hachiCheckbox" onclick="toggleDeviceName()" />
-			<label for="hachiCheckbox" class="hachiLabel">Hachi</label>
+			<label for="hachiCheckbox" class="hachiLabel"><span class="material-symbols-outlined">sound_detection_dog_barking</span></label>
 		</div>
 		<!-- Console output-->
 		<div id="consoleOutput"></div>
