--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1115,30 +1115,30 @@ $avatar_passage
 &lt;&lt;/if&gt;&gt;
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="57" name="hachi_preamble" tags="" position="1825,500" size="100,100">&lt;&lt;nobr&gt;&gt;
-&lt;&lt;set $hachi_passage to &quot;hachi_01/While playing in the park, Hachi&#39;s nose twitches, catching a scent that pulls him away from Buro. He sniffs the air, curiosity piqued by the provocative smell. Buro&#39;s voice echoes in his mind, but the scent drags him deeper.&quot;&gt;&gt;
+&lt;&lt;set $hachi_passage to &quot;hachi_pre_01/While playing in the park, Hachi&#39;s nose twitches, catching a scent that pulls him away from Buro. He sniffs the air, curiosity piqued by the provocative smell. Buro&#39;s voice echoes in his mind, but the scent drags him deeper.&quot;&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt;
 $hachi_passage
 
-&lt;&lt;if $hachi_narrating == &quot;hachi_01false&quot;&gt;&gt;
-  &lt;&lt;set $hachi_passage to &quot;hachi_02/Hachi catches a scent pulling him away: What should Hachi do? Should he continue sniffing or follow the scent deeper into the city&quot;&gt;&gt;
+&lt;&lt;if $hachi_narrating == &quot;hachi_pre_01false&quot;&gt;&gt;
+  &lt;&lt;set $hachi_passage to &quot;hachi_pre_02/Hachi catches a scent pulling him away: What should Hachi do? Should he continue sniffing or follow the scent deeper into the city&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
-&lt;&lt;if $hachi_narrating == &quot;hachi_02false&quot; and $hachi_movement == &quot;Sniffing&quot;&gt;&gt;
-  &lt;&lt;set $hachi_passage to &quot;hachi_02A/He sniffs the air, detecting subtle hints of the scent&#39;s origin. Then he follows the sweet trail of the smell towards a nearby statue.&quot;&gt;&gt;
+&lt;&lt;if $hachi_narrating == &quot;hachi_pre_02false&quot; and $hachi_movement == &quot;Sniffing&quot;&gt;&gt;
+  &lt;&lt;set $hachi_passage to &quot;hachi_pre_02A/He sniffs the air, detecting subtle hints of the scent&#39;s origin. Then he follows the sweet trail of the smell towards a nearby statue.&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
-&lt;&lt;if $hachi_narrating == &quot;hachi_02false&quot; and hachi_speed &gt;= &quot;0.2&quot; &gt;&gt;
-  &lt;&lt;set $hachi_passage to &quot;hachi_03/Determined to uncover the source of the tempting aroma, Hachi follows his instincts, venturing into the city. He starts walking towards a nearby statue.&quot;&gt;&gt;
+&lt;&lt;if $hachi_narrating == &quot;hachi_pre_02false&quot; and hachi_speed &gt;= &quot;0.2&quot; &gt;&gt;
+  &lt;&lt;set $hachi_passage to &quot;hachi_pre_03/Determined to uncover the source of the tempting aroma, Hachi follows his instincts, venturing into the city. He starts walking towards a nearby statue.&quot;&gt;&gt;
   &lt;&lt;set $hachi_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
-&lt;&lt;if $hachi_narrating == &quot;hachi_03false&quot;&gt;&gt;
-  &lt;&lt;set $hachi_passage to &quot;hachi_04/Lost amidst the city&#39;s pathways, Hachi and Buro must rely on their instincts to reunite. Their journey will take them through streets, squares, and parks, where they will encounter challenges, make new friends, and ultimately rediscover the true meaning of loyalty and friendship.&quot;&gt;&gt;
+&lt;&lt;if $hachi_narrating == &quot;hachi_pre_03false&quot;&gt;&gt;
+  &lt;&lt;set $hachi_passage to &quot;hachi_pre_04/Lost amidst the city&#39;s pathways, Hachi and Buro must rely on their instincts to reunite. Their journey will take them through streets, squares, and parks, where they will encounter challenges, make new friends, and ultimately rediscover the true meaning of loyalty and friendship.&quot;&gt;&gt;
   &lt;&lt;set $hachi_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
-&lt;&lt;if $hachi_nextAct is true and hachi_narrating == &quot;hachi_04false&quot;&gt;&gt;
+&lt;&lt;if $hachi_nextAct is true and hachi_narrating == &quot;hachi_pre_04false&quot;&gt;&gt;
     &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
   		&lt;&lt;include&quot;hachi_act1&quot;&gt;&gt;
         &lt;&lt;set $hachi_nextAct to false&gt;&gt;
@@ -1147,32 +1147,32 @@ $hachi_passage
 
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="58" name="avatar_preamble" tags="" position="1975,500" size="100,100">&lt;&lt;nobr&gt;&gt;
-&lt;&lt;set $avatar_passage to &quot;avatar_01/While playing in the park, Hachi&#39;s nose twitches, catching a scent that pulls him away from Buro. He sniffs the air, curiosity piqued by the provocative smell. Buro&#39;s voice echoes in his mind, but the scent drags him deeper.&quot;&gt;&gt;
+&lt;&lt;set $avatar_passage to &quot;avatar_pre_01/While playing in the park, Hachi&#39;s nose twitches, catching a scent that pulls him away from Buro. He sniffs the air, curiosity piqued by the provocative smell. Buro&#39;s voice echoes in his mind, but the scent drags him deeper.&quot;&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt;
 $avatar_passage
-&lt;&lt;if $avatar_narrating == &quot;avatar_01false&quot; and $hachi_speed &gt;= &quot;0.4&quot; &gt;&gt;
-  &lt;&lt;set $avatar_passage to &quot;avatar_02/Buro&#39;s heart races as he notices that Hachi is no longer there and starts searching around for any sign of his friend.&quot;&gt;&gt;
+&lt;&lt;if $avatar_narrating == &quot;avatar_pre_01false&quot; and $hachi_speed &gt;= &quot;0.4&quot; &gt;&gt;
+  &lt;&lt;set $avatar_passage to &quot;avatar_pre_02/Buro&#39;s heart races as he notices that Hachi is no longer there and starts searching around for any sign of his friend.&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
-&lt;&lt;if $avatar_narrating == &quot;avatar_02false&quot;&gt;&gt;
-  &lt;&lt;set $avatar_passage to &quot;avatar_03/Lost amidst the city&#39;s pathways, Hachi and Buro must rely on their instincts to reunite. Their journey will take them through streets, squares, and parks, where they will encounter challenges, make new friends, and ultimately rediscover the true meaning of loyalty and friendship.&quot;&gt;&gt;
+&lt;&lt;if $avatar_narrating == &quot;avatar_pre_02false&quot;&gt;&gt;
+  &lt;&lt;set $avatar_passage to &quot;avatar_pre_03/Lost amidst the city&#39;s pathways, Hachi and Buro must rely on their instincts to reunite. Their journey will take them through streets, squares, and parks, where they will encounter challenges, make new friends, and ultimately rediscover the true meaning of loyalty and friendship.&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
-&lt;&lt;if $avatar_narrating == &quot;avatar_03false&quot; and $avatar_speed &gt;=&quot;0.2&quot;&gt;&gt;
-  &lt;&lt;set $avatar_passage to &quot;avatar_04/Buro sees Hachi in the distance: What should Buro do? Should he call Hachi&#39;s name or should he Stand on one leg to get a better view?&quot;&gt;&gt;
+&lt;&lt;if $avatar_narrating == &quot;avatar_pre_03false&quot; and $avatar_speed &gt;=&quot;0.2&quot;&gt;&gt;
+  &lt;&lt;set $avatar_passage to &quot;avatar_pre_04/Buro sees Hachi in the distance: What should Buro do? Should he call Hachi&#39;s name or should he Stand on one leg to get a better view?&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
-&lt;&lt;if ($avatar_narrating == &quot;avatar_04false&quot; or $avatar_narrating == &quot;avatar_04Bfalse&quot;) and $avatar_part_mov == &quot;head&quot; and $avatar_part_dir == &quot;up&quot;&gt;&gt;
-  &lt;&lt;set $avatar_passage to &quot;avatar_04A/&#39;Hachi! Over here!&#39; Buro calls out, his voice filled with excitement&quot;&gt;&gt;
+&lt;&lt;if ($avatar_narrating == &quot;avatar_pre_04false&quot; or $avatar_narrating == &quot;avatar_04Bfalse&quot;) and $avatar_part_mov == &quot;head&quot; and $avatar_part_dir == &quot;up&quot;&gt;&gt;
+  &lt;&lt;set $avatar_passage to &quot;avatar_pre_04A/&#39;Hachi! Over here!&#39; Buro calls out, his voice filled with excitement&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
-&lt;&lt;if ($avatar_narrating == &quot;avatar_04false&quot; or $avatar_narrating == &quot;avatar_04Afalse&quot;) and ($avatar_movement == &quot;standing left leg&quot; or $avatar_movement == &quot;standing right leg&quot;) &gt;&gt;
-  &lt;&lt;set $avatar_passage to &quot;avatar_04B/He stands on one leg, straining to get a better view of Hachi walking away through the city streets.&quot;&gt;&gt;
+&lt;&lt;if ($avatar_narrating == &quot;avatar_pre_04false&quot; or $avatar_narrating == &quot;avatar_pre_04Afalse&quot;) and ($avatar_movement == &quot;standing left leg&quot; or $avatar_movement == &quot;standing right leg&quot;) &gt;&gt;
+  &lt;&lt;set $avatar_passage to &quot;avatar_pre_04B/He stands on one leg, straining to get a better view of Hachi walking away through the city streets.&quot;&gt;&gt;
   &lt;&lt;set $nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
-&lt;&lt;if $nextAct is true and $avatar_narrative == &quot;avatar_04Bfalse&quot; &gt;&gt;
+&lt;&lt;if $nextAct is true and $avatar_narrative == &quot;avatar_pre_04Bfalse&quot; &gt;&gt;
     &lt;&lt;replace &quot;#avatar_story&quot;&gt;&gt;
   		&lt;&lt;include&quot;avatar_act1_1&quot;&gt;&gt;
         &lt;&lt;set $nextAct to false&gt;&gt;
@@ -1248,7 +1248,34 @@ console.log(variables().avatar_comment);
 &lt;&lt;/if&gt;&gt;
 &lt;&lt;/liveblock&gt;&gt;
 
-&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="61" name="hachi_act1_1" tags="" position="1700,625" size="100,100">HACHI 1_1
+&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="61" name="hachi_act1_1" tags="" position="1700,625" size="100,100">&lt;&lt;nobr&gt;&gt;
+&lt;&lt;set $hachi_passage to &quot;hachi_act1_01/Hachi&#39;s determination to find the source of the tempting scent leads him deeper. As he follows the streets, the aroma grows stronger, filling his senses with eagerness. Finally, Hachi comes across a statue in a small square. The scent seems to be coming from the base of the statue.&quot;&gt;&gt;
+
+&lt;&lt;liveblock&gt;&gt;
+$hachi_passage
+
+&lt;&lt;if $hachi_narrating == &quot;hachi_act1_01false&quot;&gt;&gt;
+  &lt;&lt;set $hachi_passage to &quot;hachi_act1_02/Hachi reaches the statue: What should Hachi do? Bark, to see who replies? Or, get a closer look at the tiny flower in th base of the statue? &quot;&gt;&gt;
+&lt;&lt;/if&gt;&gt;
+
+&lt;&lt;if ($hachi_narrating == &quot;hachi_act1_02false&quot; or $hachi_narrating ==&quot;hachi_act1_02Bfalse&quot;) and $hachi_tag == &quot;16&quot;&gt;&gt;
+  &lt;&lt;set $hachi_passage to &quot;hachi_act1_02A/He discovers a tiny fairy nestled among the petals of the flower. &quot;Wow, a fairy!&quot; Hachi exclaims, his tail wagging with excitement.&quot;&gt;&gt;
+  &lt;&lt;set $hachi_nextAct to true&gt;&gt;
+&lt;&lt;/if&gt;&gt;
+
+&lt;&lt;if ($hachi_narrating == &quot;hachi_act1_02false&quot; or $hachi_narrating ==&quot;hachi_act1_02Afalse&quot;) and $hachi_movement == &quot;Bark&quot;&gt;&gt;
+  &lt;&lt;set $hachi_passage to &quot;hachi_act1_02B/Hachi&#39;s barks echo through the square, but there&#39;s no response, prompting him to continue his search.&quot;&gt;&gt;
+&lt;&lt;/if&gt;&gt;
+
+&lt;&lt;if $hachi_nextAct is true and hachi_narrating == &quot;hachi_act1_02Afalse&quot;&gt;&gt;
+    &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
+  		&lt;&lt;include&quot;hachi_act1_1&quot;&gt;&gt;
+        &lt;&lt;set $hachi_nextAct to false&gt;&gt;
+  &lt;&lt;/replace&gt;&gt;
+&lt;&lt;/if&gt;&gt;
+
+&lt;&lt;/liveblock&gt;&gt;
+&lt;&lt;/nobr&gt;&gt;
 </tw-passagedata><tw-passagedata pid="62" name="hachi_act1_2" tags="" position="1700,750" size="100,100"></tw-passagedata><tw-passagedata pid="63" name="avatar_act1_1" tags="" position="2100,625" size="100,100">ACT 1_1</tw-passagedata><tw-passagedata pid="64" name="avatar_act1_2" tags="" position="2100,750" size="100,100"></tw-passagedata><tw-passagedata pid="65" name="both_end" tags="" position="1850,1500" size="200,100"></tw-passagedata><tw-passagedata pid="66" name="avatar_end" tags="" position="1725,1625" size="200,200"></tw-passagedata><tw-passagedata pid="67" name="hachi_end" tags="" position="1975,1625" size="200,200"></tw-passagedata><tw-passagedata pid="68" name="PassageFooter" tags="" position="1175,100" size="200,100">&lt;&lt;liveblock&gt;&gt;
 
 &lt;&lt;if $prev_avatar_passage !== $avatar_passage&gt;&gt;
